[project]
name = "python_ics"
dynamic = ["version"]
authors = [{ name = "David Rebbe", email = "drebbe@intrepidcs.com" }]
maintainers = [{ name = "David Rebbe", email = "drebbe@intrepidcs.com" }]
description = "Python wrapper for interfacing to IntrepidCS Hardware."
keywords = ["intrepidcs", "CAN", "Ethernet", "Automotive", "ICS"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://intrepidcs.com"
Documentation = "http://python-ics.readthedocs.io/"
Repository = "https://github.com/intrepidcs/python_ics/"
Issues = "https://github.com/intrepidcs/python_ics/issues"

[tool.setuptools.dynamic]
version = { attr = "ics.__version__" }

[build-system]
requires = [
  "setuptools",
  "wheel",
  "dunamai",
]


[tool.cibuildwheel]
build = "{*-win32,*-win_amd64,*-macosx_universal2,*-manylinux_x86_64,*-manylinux_aarch64}"
skip = "cp36-* cp37-* pp* *-manylinux_i686 *-musllinux_*"
environment = { CIBW_BUILD_VERBOSITY = 1, DISTUTILS_DEBUG = 1, MACOSX_DEPLOYMENT_TARGET = "10.13", CIBW_ARCHS_LINUX = "auto aarch64" }
before-build = "python -m pip install wheel"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
free-threaded-support = true

[tool.cibuildwheel.linux]
before-build = "dnf install -y cmake clang clang-tools-extra flex bison"
archs = "auto aarch64"

[tool.cibuildwheel.macos]
archs = ["universal2"]
before-build = "brew install cmake clang-format"

[tool.cibuildwheel.windows]
before-build = "choco install llvm"

[tool.black]
line-length = 120
# https://stackoverflow.com/questions/73247204/black-not-respecting-extend-exclude-in-pyproject-toml
force-exclude = '''
/(
  | .vscode
  | .venv
  | build
  | ics
  | include
  | msvc
  | src
)/
'''
